--- a/content/includes/admin/scss/parts/_add_posts.scss
+++ b/content/includes/admin/scss/parts/_add_posts.scss
@@ -79,7 +79,8 @@
     width: 95%;
     margin: 20px;
     box-shadow: 9px 6px 10px darken(white, 2%);
-    border: 1px solid lightgray;
+    border: 1px solid lighten(lightgray, 10%);
+    height: 100%;
 
     h3 {
         border-bottom: 1px solid lightgray;
@@ -88,7 +89,7 @@
 
     iframe {
         width: 100%;
-        min-height: 100%;
+        height: 100%;
     }
 }
 
